fix z-index

--- a/src/App.scss
+++ b/src/App.scss
@@ -47,7 +47,7 @@
 
       &.toggle {
         opacity: 1;
-        z-index: 5;
+        z-index: 7;
       }
 
       margin-right: 0;
@@ -167,7 +167,7 @@
   -o-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
   cursor: pointer;
-  z-index: 5;
+  z-index: 7;
 
   span {
     display: block;
@@ -242,7 +242,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0,0,0,0.5);
-  z-index: 4;
+  z-index: 6;
   -webkit-transition: .5s ease-in-out;
   -moz-transition: .5s ease-in-out;
   -o-transition: .5s ease-in-out;
