--- a/src/views/GSL/index.scss
+++ b/src/views/GSL/index.scss
@@ -1,12 +1,7 @@
 .gsl {
   margin: auto;
   width: 90%;
-  height: 80vh;
   margin-bottom: 5rem;
-
-  @include max-media(tablet) {
-    height: 100vh;
-  }
 
   h1 {
     font-size: 3.5rem;
@@ -60,7 +55,7 @@
       display: flex;
       width: 40%;
       min-width: 30vh;
-      height: 100%;
+      height: 75vh;
       align-items: center;
       max-width: 550px;
 
@@ -69,10 +64,11 @@
       }
 
       @include max-media(tablet) {
-        height: 50%;
+        height: 50vh;
         width: 55%;
         align-items: flex-start;
         justify-content: center;
+        margin: 1rem 0;
       }
 
       @include max-media(mobile) {
